--- a/petclinic-api/package.json
+++ b/petclinic-api/package.json
@@ -21,6 +21,7 @@
     "tedious": "^18.6.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "sequelize-cli": "^6.6.3"
   }
 }
